Set up Google OAuth
- Remove legacy v1 controllers and routes - Add Google OAuth
authentication with Passport - Switch email service to Resend API -
Update Prisma schema for user fields - Update validation schemas for new
user model - Add session and Passport initialization to app - Update
environment variable handling for new services - Restructure controllers
and routes for modularity - Remove package-lock.json and .example.env -
Add new dependencies for OAuth and session management

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "cross-env": "^7.0.3",
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
+        "express-session": "^1.18.2",
         "helmet": "^8.1.0",
         "ioredis": "^5.6.1",
         "jsonwebtoken": "^9.0.2",
@@ -30,6 +31,10 @@
         "morgan": "^1.10.0",
         "multer": "^2.0.2",
         "nodemailer": "^7.0.5",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-oauth2-refresh": "^2.2.0",
+        "resend": "^6.0.3",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3",
         "winston": "^3.17.0",
@@ -38,11 +43,15 @@
     "devDependencies": {
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.2",
+        "@types/express-session": "^1.18.2",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/module-alias": "^2.0.4",
         "@types/morgan": "^1.9.9",
         "@types/multer": "^2.0.0",
         "@types/nodemailer": "^7.0.0",
+        "@types/passport": "^1.0.17",
+        "@types/passport-google-oauth20": "^2.0.16",
+        "@types/passport-oauth2-refresh": "^1.1.4",
         "nodemon": "^3.1.10",
         "prisma": "^6.8.2"
     }
