--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@elastic/elasticsearch": "^9.1.1",
         "@prisma/client": "^6.8.2",
         "argon2": "^0.44.0",
         "cors": "^2.8.5",
@@ -25,6 +26,7 @@
         "express": "^5.1.0",
         "express-session": "^1.18.2",
         "helmet": "^8.1.0",
+        "imagekit": "^6.0.0",
         "ioredis": "^5.6.1",
         "jsonwebtoken": "^9.0.2",
         "module-alias": "^2.2.3",
