--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "scripts": {
         "dev": "cross-env NODE_ENV=development nodemon -r module-alias/register src/index.ts",
         "build": "tsc",
-        "postbuild": "npm prune --production",
         "start": "cross-env NODE_ENV=production node -r module-alias/register dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -36,9 +35,11 @@
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "passport-oauth2-refresh": "^2.2.0",
+        "qs": "^6.14.0",
         "resend": "^6.0.3",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3",
+        "uuid": "^13.0.0",
         "winston": "^3.17.0",
         "zod": "^3.25.67"
     },
@@ -50,10 +51,12 @@
         "@types/module-alias": "^2.0.4",
         "@types/morgan": "^1.9.9",
         "@types/multer": "^2.0.0",
+        "@types/node": "^24.6.0",
         "@types/nodemailer": "^7.0.0",
         "@types/passport": "^1.0.17",
         "@types/passport-google-oauth20": "^2.0.16",
         "@types/passport-oauth2-refresh": "^1.1.4",
+        "@types/qs": "^6.14.0",
         "nodemon": "^3.1.10",
         "prisma": "^6.8.2"
     }
