--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,14 +16,14 @@
         "skipLibCheck": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
-        "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "isolatedModules": true,
         "outDir": "./dist",
         "rootDir": "./src",
         "incremental": true,
         "sourceMap": true,
-        "baseUrl": "./",
+        "moduleResolution": "node10",
+        "baseUrl": ".",
         "typeRoots": ["./node_modules/@types", "./src/@types"],
         "paths": {
             "@/*": ["src/*"]
