--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "passport-oauth2-refresh": "^2.2.0",
         "qs": "^6.14.0",
         "resend": "^6.0.3",
+        "socket.io": "^4.8.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3",
         "uuid": "^13.0.0",
