--- a/.dockerignore
+++ b/.dockerignore
@@ -11,10 +11,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# Lock files
+# Lock files (keep pnpm-lock.yaml for Docker builds)
 package-lock.json
 yarn.lock
-pnpm-lock.yaml
 
 # OS
 .DS_Store
