--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,8 @@ services:
             REDIS_PORT: 6379
         ports:
             - "127.0.0.1:3000:3000"
+        env_file:
+            - .env
         logging: *default-logging
         depends_on:
             - redis
