feat: Add admin routes for categories, dashboard, feedback, items, and profile management
- Implemented category routes for creating, retrieving, updating, and deleting categories.
- Added dashboard route for fetching dashboard statistics.
- Created feedback routes for retrieving and deleting feedback.
- Introduced item routes for managing items including verification and rejection.
- Added profile route for fetching the authenticated admin's profile.

feat: Enhance user and authentication routes

- Updated user routes to include fetching, updating, and deleting users.
- Added logout functionality to admin and user authentication routes.
- Implemented refresh token functionality in user authentication routes.

feat: Add public routes for categories, items, and search functionality

- Created public routes for retrieving categories and items.
- Implemented search functionality with suggestions.

fix: Improve chat service with pagination and filtering

- Enhanced chat service to support pagination and filtering by user IDs and date ranges.
- Added functionality to find chats by user ID with pagination.

fix: Update message service to include media URLs

- Modified message service to transform messages with media relations to include media URLs.
- Improved message retrieval with pagination and filtering.

fix: Adjust OTP service expiration time

- Increased OTP expiration time from 180 seconds to 300 seconds.

fix: Refactor socket manager for improved authentication and event handling

- Updated socket manager to use cookies for authentication.
- Enhanced error handling for socket connections and events.
- Improved logging for socket events and user actions.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@elastic/elasticsearch": "^9.1.1",
         "@prisma/client": "^6.8.2",
         "argon2": "^0.44.0",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^17.2.1",
@@ -42,6 +43,7 @@
         "zod": "^3.25.67"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.18",
         "@types/express": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.10",
