Add verification-user relation and service updates
- Add verification relation to User in Prisma and update TS schemas -
Enhance VerificationService: include relations, pagination, and status
updates that toggle user.isVerified - Add root GET endpoint and new npm
scripts (seed, clear-db) - Include seller select in item include payload
- Remove Prisma-specific error handling and add lightweight debug logs

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "dev": "cross-env NODE_ENV=development nodemon -r module-alias/register src/index.ts",
         "build": "tsc",
         "start": "cross-env NODE_ENV=production node -r module-alias/register dist/index.js",
+        "seed": "ts-node -r module-alias/register seed.ts",
+        "clear-db": "ts-node -r module-alias/register clear-db.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "_moduleAliases": {
